# email_triage

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  score_utils.py  validate-submission.sh
server/: app.py  email_environment.py
