[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world environment where agents triage customer support emails."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"